--- a/tourist-web/src/main/webapp/view/manage/supplier/resetSupplierPassword.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/resetSupplierPassword.html
@@ -35,9 +35,9 @@
                 <div class="ibox-title">
                     <h5>修改密码</h5>
                 </div>
-                <div class="ibox-title">
-                    <button onclick="history.go(-1)" class="btn btn-primary" type="button">返回</button>
-                </div>
+                <!--<div class="ibox-title">-->
+                    <!--<button onclick="history.go(-1)" class="btn btn-primary" type="button">返回</button>-->
+                <!--</div>-->
                 <div class="ibox-content">
                     <!--/*@thymesVar id="login" type="com.huotu.huobanplus.sns.entity.Circle"*/-->
                     <form method="post" class="form-horizontal">
