buyer用户采购资格订单添加

--- a/tourist-web/src/main/webapp/view/wap/submission.html
+++ b/tourist-web/src/main/webapp/view/wap/submission.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -47,11 +47,58 @@
         </div>
     </div>
     <p style="height: 20px"></p>
-    <a href="javascript:;" class="weui_btn weui_btn_primary anniu " style="margin: 10px;">立即支付开通</a>
+    <button id="weixin" class="weui_btn weui_btn_primary anniu ">微信支付开通</button>
+    <button id="alipay" class="weui_btn weui_btn_warn anniu">支付宝支付开通</button>
 
 
 </div>
+<script src="http://resali.huobanplus.com/cdn/jquery/2.2.4/jquery.min.js"></script>
+<script src="http://cosytest.51flashmall.com/js/jquery.utils-1.0.js?v=3.0.1" type="text/javascript"></script>
+<script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
+<script th:inline="javascript">
+    var buyerOrderPayUrl = /*[[@{/wap/buyerOrderPay}]]*/ "my.html";
+    var ua = window.navigator.userAgent.toLowerCase();
+    if (ua.match(/MicroMessenger/i) == 'micromessenger') {
+        $("#weixin").show();
+        $("#alipay").hide();
+    } else {
+        $("#weixin").hide();
+        $("#alipay").show();
+    }
+    $(function () {
+        $("#weixin").click(function () {
+            var data = {payType: 1}
+            orderPay(data);
+        });
+        $("#alipay").click(function () {
+            var data = {payType: 0}
+            orderPay(data);
+        });
+    });
+    function orderPay(data) {
+        var load = layer.load();
+        $.ajax({
+            url: buyerOrderPayUrl,
+            method: "post",
+            data: data,
+            success: function (result) {
+                layer.close(load);
+                if (result.code == 200) {
+                    //前台跳转到
+                    utils.GetPaymentUrl(result.customerId, result.orderId, data.payType);
+                } else {
+                    layer.alert(result.msg);
+                }
+            },
+            error: function (error) {
+                layer.close(load);
+                layer.alert(error);
+            }
+        });
+    }
+</script>
 </body>
+
 </html>
 
 
