--- a/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
+++ b/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
@@ -23,6 +23,8 @@
         <div class="xiaofeijilv">
             <ul>
                 <li class="t">
+                    <input type="hidden" id="orderId" th:value="${order.mallOrderNo}">
+                    <input type="hidden" id="customerId" th:value="${customerId}">
                     <div class="DDH">订单编号：<span th:text="${order.orderNo}">201604943218493</span>
                         <p style="clear:both"></p>
                     </div>
@@ -139,12 +141,8 @@
         </div>
     </div>
     <div style=" margin: 10px;">
-        <!-- todo 同步商城订单，跳转商城支付 -->
-        <a href="paySuccess.html" id="weixin" th:href="@{/wap/orderPay(orderId=${order.id},payType=1)}"
-           class="weui_btn weui_btn_primary">微信支付</a>
-        <a href="paySuccess.html" id="alipay" th:href="@{/wap/orderPay(orderId=${order.id},payType=0)}"
-           class="weui_btn weui_btn_warn">支付宝</a>
-
+        <button id="weixin" class="weui_btn weui_btn_primary">微信支付</button>
+        <button id="alipay" class="weui_btn weui_btn_warn">支付宝</button>
         <a href="touristGoodInfo.html" th:href="@{/wap/cancelOrder(orderId=${order.id})}"
            class="weui_btn weui_btn_default">取消订单
         </a>
@@ -168,21 +166,54 @@
     </div>
 
 </div>
-</body>
-</html>
 <script src="http://resali.huobanplus.com/cdn/jquery/2.2.4/jquery.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/jquery-weui.min.js"></script>
 <script type="text/javascript" src="js/w/swiper.animate1.0.2.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/swiper.min.js"></script>
-<script>
+<script src="http://cosytest.51flashmall.com/js/jquery.utils-1.0.js?v=3.0.1" type="text/javascript"></script>
+<script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
+<script th:inline="javascript">
+    var orderPayUrl = /*[[@{/wap/orderPay}]]*/ "paySuccess.html"
+    var ua = window.navigator.userAgent.toLowerCase();
+    if (ua.match(/MicroMessenger/i) == 'micromessenger') {
+        $("#weixin").show();
+        $("#alipay").hide();
+    } else {
+        $("#weixin").hide();
+        $("#alipay").show();
+    }
     $(function () {
-        var ua = window.navigator.userAgent.toLowerCase();
-        if (ua.match(/MicroMessenger/i) == 'micromessenger') {
-            $("#weixin").show();
-            $("#alipay").hide();
-        } else {
-            $("#weixin").hide();
-            $("#alipay").show();
-        }
-    })
+
+        $("#weixin").click(function () {
+            var data = {orderId: $("#orderId").val(), payType: 1};
+            orderPay(data);
+        });
+        $("#alipay").click(function () {
+            var data = {orderId: $("#orderId").val(), payType: 0};
+            orderPay(data);
+        });
+    });
+    function orderPay(data) {
+        var load = layer.load();
+        $.ajax({
+            url: orderPayUrl,
+            method: "post",
+            data: data,
+            success: function (result) {
+                layer.close(load);
+                if (result.code == 200) {
+                    //前台跳转到
+                    utils.GetPaymentUrl($("#customerId").val(), $("#orderId").val(), data.payType)
+                } else {
+                    layer.alert(result.msg);
+                }
+            },
+            error: function (error) {
+                layer.close(load);
+                layer.alert(error);
+            }
+        })
+    }
 </script>
+</body>
+</html>
