--- a/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
+++ b/tourist-web/src/main/webapp/view/wap/procurementPayPage.html
@@ -173,7 +173,8 @@
 <script src="http://cosytest.51flashmall.com/js/jquery.utils-1.0.js?v=3.0.1" type="text/javascript"></script>
 <script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
 <script th:inline="javascript">
-    var orderPayUrl = /*[[@{/wap/orderPay}]]*/ "paySuccess.html"
+    var orderPayUrl = /*[[@{/wap/orderPay}]]*/ "paySuccess.html";
+    var returnUrl = /*[[@{/wap/orderPayCallback(orderType=0)}]]*/ "";
     var ua = window.navigator.userAgent.toLowerCase();
     if (ua.match(/MicroMessenger/i) == 'micromessenger') {
         $("#weixin").show();
@@ -203,7 +204,7 @@
                 layer.close(load);
                 if (result.code == 200) {
                     //前台跳转到
-                    utils.GetPaymentUrl($("#customerId").val(), $("#orderId").val(), data.payType)
+                    utils.GetPaymentUrl($("#customerId").val(), $("#orderId").val(), data.payType, returnUrl)
                 } else {
                     layer.alert(result.msg);
                 }
