--- a/tourist-web/src/main/webapp/view/wap/bottom.html
+++ b/tourist-web/src/main/webapp/view/wap/bottom.html
@@ -10,7 +10,7 @@
     <p>搜索</p>
 </a>
 
-<a th:href="@{/wap/showMyInfo(buyerId=1)}" href="my.html" class="weui_navbar_item weui_bar_item_on">
+<a th:href="@{/wap/showMyInfo}" href="my.html" class="weui_navbar_item weui_bar_item_on">
     <p class="kimg dhwodeicon"></p>
     <p>我的</p>
 </a>
