--- a/tourist-web/src/main/webapp/view/wap/my.html
+++ b/tourist-web/src/main/webapp/view/wap/my.html
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div class="weui_cells weui_cells_access">
-            <a class="weui_cell" th:href="@{/wap/showAllOrders(buyerId=${buyer.id})}" href="allOrder.html">
+            <a class="weui_cell" th:href="@{/wap/showAllOrders}" href="allOrder.html">
                 <div class="weui_cell_hd">
                     <img src="../../assets/img/cg.png" alt=""
                                                style="width:20px;margin-right:5px;display:block">
