--- a/tourist-web/src/main/webapp/view/wap/submission.html
+++ b/tourist-web/src/main/webapp/view/wap/submission.html
@@ -1,5 +1,14 @@
 <!doctype html>
-<html xmlns:th="http://www.thymeleaf.org" lang="en">
+<!--
+  ~ 版权所有:杭州火图科技有限公司
+  ~ 地址:浙江省杭州市滨江区西兴街道阡陌路智慧E谷B幢4楼
+  ~
+  ~ (c) Copyright Hangzhou Hot Technology Co., Ltd.
+  ~ Floor 4,Block B,Wisdom E Valley,Qianmo Road,Binjiang District
+  ~ 2013-2016. All rights reserved.
+  -->
+
+<html xmlns:th="http://www.thymeleaf.org"  xmlns:res="http://resource.jiangcai.me" lang="en">
 <head>
     <meta name="viewport"
           content="width=device-width,minimum-scale=1,user-scalable=no,maximum-scale=1,initial-scale=1"/>
@@ -14,36 +23,52 @@
     <link rel="stylesheet" type="text/css" href="../../assets/css/weui.min-xzlx-diy.css">
     <title>提交待审核</title>
 </head>
+<!--/*@thymesVar id="setting" type="com.huotu.tourist.entity.PurchaserProductSetting"*/-->
 <body class="bac">
 <div class="xzlx-hot">
     <div class="swiper-container">
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide"><img src="../../assets/img/swiper-1.jpg"/></div>
+            <div class="swiper-slide">
+                <img res:src="${setting.bannerUri}" src="../../assets/img/swiper-1.jpg"/>
+            </div>
         </div>
     </div>
     <div class="weui_panel_bd">
         <div class="weui_media_box weui_media_text  fwmoney">
-            <h4 class="weui_media_title">线路服务商采购费</h4>
-            <h4 class="weui_media_title" style="color: #b81212;font-size:14px;font-weight: bold;">￥300元/人</h4>
+
+            <h4 class="weui_media_title" th:text="${setting.name}">线路服务商采购费</h4>
+            <h4 class="weui_media_title" style="color: #b81212;font-size:14px;font-weight: bold;" th:text="'￥'+${setting.price==null?0:setting.price}+'元/人'">￥300元/人</h4>
         </div>
     </div>
     <div class="weui_panel weui_panel_access">
         <div class="weui_panel_hd">说明</div>
         <div class="weui_panel_bd">
             <div class="weui_media_box weui_media_text">
-                <p class="weui_media_desc">线路服务商采购费线路服务商采购费线路服务商采购费</p>
+                <p class="weui_media_desc" th:text="${setting.explainStr}">线路服务商采sdsd购费线路服务
+                    商采购费线路服务商采购费线路服务商采购费商采购费线路服务商采购费商采购费线路服务商采购费商采购费线路服务商采购费
+                    商采购费线路服务商采购费商采购费线路服务商采购费商采购费线路服务商采购费商采购费
+                    线路服务商采sdsd购费线路服务
+                    商采购费线路服务商采购费线路服务商采购费商采购费线路服务商采购费商采购费线路服务商采购费商采购费线路服务商采购费
+                    商采购费线路服务商采购费商采购费线路服务商采购费商采购费线路服务商采购费商采购费
+
+                    线路服务商采sdsd购费线路服务
+                    商采购费线路服务商采购费线路服务商采购费商采购费线路服务商采购费商采购费线路服务商采购费商采购费线路服务商采购费
+                    商采购费线路服务商采购费商采购费线路服务商采购费商采购费线路服务商采购费商采购费
+
+
+                </p>
             </div>
-            <div class="weui_media_box weui_media_text">
-                <p class="weui_media_desc">线路服务商采购费线路服务商采购费线路服务商采购费线路服务商采购费</p>
-            </div>
-            <div class="weui_media_box weui_media_text">
-                <p class="weui_media_desc">线路服务商采购费线路</p>
-            </div>
-            <div class="weui_media_box weui_media_text">
-                <p class="weui_media_desc">线路服务商采购费线路服务商服务商采购费</p>
-            </div>
+            <!--<div class="weui_media_box weui_media_text">-->
+                <!--<p class="weui_media_desc">线路服务商采购费线路服务商采购费线路服务商采购费线路服务商采购费</p>-->
+            <!--</div>-->
+            <!--<div class="weui_media_box weui_media_text">-->
+                <!--<p class="weui_media_desc">线路服务商采购费线路</p>-->
+            <!--</div>-->
+            <!--<div class="weui_media_box weui_media_text">-->
+                <!--<p class="weui_media_desc">线路服务商采购费线路服务商服务商采购费</p>-->
+            <!--</div>-->
         </div>
     </div>
     <p style="height: 20px"></p>
