--- a/tourist-web/src/main/webapp/view/manage/platform/resetPassword.html
+++ b/tourist-web/src/main/webapp/view/manage/platform/resetPassword.html
@@ -90,6 +90,8 @@
 <script src="http://resali.huobanplus.com/cdn/layer/2.4/layer.js"></script>
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
+    linkUrl = /*[[@{/distributionPlatform/resetPassword}]]*/ '../../../mock/platform/httpJson.json';
+
     //提交
     var submitForm = function () {
         var oldPassword = $("input[name='oldPassword']").val();
@@ -105,7 +107,7 @@
         }
         $.ajax({
             type: 'POST',
-            url: '/distributionPlatform/resetPassword',
+            url: linkUrl,
             dataType: 'json',
             data: {oldPassword: oldPassword, newPassword: newPassword},
             success: function (result) {
