--- a/tourist-web/src/main/webapp/view/wap/index.html
+++ b/tourist-web/src/main/webapp/view/wap/index.html
@@ -54,15 +54,15 @@
                     <div class="weui_tabbar_icon"><img src="../../assets/img/mdd.png" alt=""></div>
                     <p class="weui_tabbar_label">目的地</p>
                 </a>
-                <a href="6-mddxl.html" class="weui_tabbar_item">
+                <a href="javascript:layer.alert('正在建设');" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/cty.png" alt=""></div>
                     <p class="weui_tabbar_label">长途游</p>
                 </a>
-                <a href="6-mddxl.html" class="weui_tabbar_item">
+                <a href="javascript:layer.alert('正在建设');" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/dty.png" alt=""></div>
                     <p class="weui_tabbar_label">短途游</p>
                 </a>
-                <a href="6-mddxl.html" class="weui_tabbar_item">
+                <a href="javascript:layer.alert('正在建设');" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/jwy.png" alt=""></div>
                     <p class="weui_tabbar_label">境外游</p>
                 </a>
@@ -72,11 +72,11 @@
                     <div class="weui_tabbar_icon"><img src="../../assets/img/hdlx.png" alt=""></div>
                     <p class="weui_tabbar_label">活动类型</p>
                 </a>
-                <a href="javascript:alert('这个没有用待删除');" class="weui_tabbar_item">
+                <a href="recommendGoods.html" th:href="@{/wap/recommendGoods}" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/rmlx.png" alt=""></div>
                     <p class="weui_tabbar_label">热门路线</p>
                 </a>
-                <a href="javascript:;" class="weui_tabbar_item">
+                <a href="javascript:layer.alert('正在建设');" class="weui_tabbar_item">
                     <div class="weui_tabbar_icon"><img src="../../assets/img/jchg.png" alt=""></div>
                     <p class="weui_tabbar_label">精彩回顾</p>
                 </a>
@@ -230,6 +230,7 @@
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/jquery-weui.min.js"></script>
 <script type="text/javascript" src="js/w/swiper.animate1.0.2.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/jquery-weui/0.8.2/swiper.min.js"></script>
+<script src="http://resali.huobanplus.com/cdn/layer/3.0.1/layer.js"></script>
 <script>
     $(".swiper-container").swiper({
         loop: true,
