--- a/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/goodsDetailsH+.html
@@ -27,6 +27,9 @@
     <link href="http://resali.huobanplus.com/cdn/hotui/css/plugins/summernote/summernote.css" rel="stylesheet"/>
     <link href="http://resali.huobanplus.com/cdn/hotui/css/plugins/summernote/summernote-bs3.css" rel="stylesheet"/>
     <link href="../../../assets/libs/cityPicker/css/city-picker.css" rel="stylesheet"/>
+    <link href="http://resali.huobanplus.com/cdn/hotui/css/plugins/fancybox/jquery.fancybox.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://resali.huobanplus.com/cdn/jquery-fine-uploader/5.10.0/fine-uploader-new.min.css"
+          property=""/>
     <link href="http://resali.huobanplus.com/cdn/hotui/css/style.min-1.0.2.css" rel="stylesheet"/>
 
 </head>
@@ -76,8 +79,13 @@
                                             <label class="col-sm-1 control-label">封面图片：</label>
 
                                             <div class="col-sm-10">
-                                                    <img id="pictureUrl" style="width: 150px;height: 100px"  res:src="*{touristImgUri}"
+                                                <div class="col-sm-3">
+                                                    <img id="pictureUrl" style="width: 350px;height: 200px"
+                                                         res:src="*{touristImgUri}"
                                                          src="http://placehold.it/300x200?text=封面&size=50"/>
+                                                    <a title="Close" class="fancybox-item fancybox-close"
+                                                       href="javascript:;"></a>
+                                                </div>
                                                 <label title="上传图片" for="upload" class="btn btn-success">
                                                     <input onchange="uploadImage()" type="file" accept="image/*"
                                                            id="upload" name="upload" class="hide"/> 上传新图片
@@ -90,14 +98,25 @@
                                             <label class="col-sm-1 control-label">上传组图：</label>
 
                                             <div class="col-sm-10">
-                                                <img style="width: 150px;height: 100px"  res:src="*{touristImgUri}"
-                                                     src="http://placehold.it/300x200?text=封面&size=50"/>
-                                                <img style="width: 150px;height: 100px"  res:src="*{touristImgUri}"
-                                                     src="http://placehold.it/300x200?text=封面&size=50"/>
-                                                <!--<label title="上传图片" for="fileImage" class="btn btn-success">-->
-                                                    <!--<input onchange="uploadImage()" type="file" accept="image/*"  id="fileImage" name="fileImage" class="hide"/> 上传新图片-->
-                                                <!--</label>-->
-                                                <!--<span class="help-block m-b-none">推荐图片大小:300x200</span>-->
+                                                <div class="col-sm-2">
+                                                    <img style="width: 230px;height: 150px"
+                                                         res:src="*{touristImgUri}"
+                                                         src="http://placehold.it/300x200?text=封面&size=50"/>
+                                                    <a style="display: none" title="Close"
+                                                       class="fancybox-item fancybox-close"
+                                                       href="javascript:;"></a>
+                                                </div>
+                                                <div class="col-sm-2">
+                                                    <img style="width: 230px;height: 150px"
+                                                         res:src="*{touristImgUri}"
+                                                         src="http://placehold.it/300x200?text=封面&size=50"/>
+                                                    <a title="Close" class="fancybox-item fancybox-close"
+                                                       href="javascript:;"></a>
+                                                </div>
+                                                <label title="上传图片" for="upload" class="btn btn-success">
+                                                    <input onchange="uploadImage()" type="file" accept="image/*"
+                                                           id="upload" name="upload" class="hide"/> 上传新图片
+                                                </label>
                                             </div>
                                         </div>
 
@@ -325,6 +344,8 @@
 <script src="../../../assets/libs/cityPicker/js/city-picker.data.js"></script>
 <script src="../../../assets/libs/cityPicker/js/city-picker.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/ajaxfileupload/ajaxfileupload.js"></script>
+<script src="../../../assets/libs/fine-upload/jquery.fine-uploader.min.js"></script>
+<!--<script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/fancybox/jquery.fancybox.js"></script>-->
 <script type="text/javascript" th:inline="javascript">
     /*<![CDATA[*/
 
@@ -332,6 +353,13 @@
     var touristImgUri=/*[[${good.touristImgUri}]]*/'';
     /*]]>*/
 
+</script>
+<script>
+    $(document).ready(function(){
+        $("img").click(function(){
+            $(this).next("a").show();
+        });
+    });
 </script>
 <script src="../../../assets/js/manage/supplier/goodsDetails.js"></script>
 
