--- a/tourist-web/src/main/webapp/view/manage/supplier/main.html
+++ b/tourist-web/src/main/webapp/view/manage/supplier/main.html
@@ -176,6 +176,88 @@
 <script src="http://resali.huobanplus.com/cdn/hotui/js/hplus.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/contabs.min.js"></script>
 <script src="http://resali.huobanplus.com/cdn/hotui/js/plugins/pace/pace.min.js"></script>
+<script src="../../../assets/js/manage/main.js"></script>
+
+<!--共享的文件上传模板-->
+<script type="text/template" id="qq-template">
+    <div class="qq-uploader-selector qq-uploader" qq-drop-area-text="拖拽至此">
+        <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">
+            <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                 class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>
+        </div>
+        <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
+            <span class="qq-upload-drop-area-text-selector"></span>
+        </div>
+        <div class="qq-upload-button-selector qq-upload-button">
+            <div>选择文件</div>
+        </div>
+        <span class="qq-drop-processing-selector qq-drop-processing">
+                <span>处理中</span>
+                <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
+            </span>
+        <ul class="qq-upload-list-selector qq-upload-list" aria-live="polite" aria-relevant="additions removals">
+            <li class="qq-file-id-3 qq-upload-success" qq-file-id="3">
+                <div class="qq-progress-bar-container-selector qq-hide">
+                    <div role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"
+                         class="qq-progress-bar-selector qq-progress-bar" style="width: 100%;"></div>
+                </div>
+                <span class="qq-upload-spinner-selector qq-upload-spinner qq-hide"></span>
+                <img class="qq-thumbnail-selector" qq-max-size="100" qq-server-scale=""
+                     src="">
+                <span class="qq-upload-file-selector qq-upload-file" title="testUpload.jpg">testUpload.jpg</span>
+                <span class="qq-upload-size-selector qq-upload-size">9.9kB</span>
+                <button type="button" class="qq-btn qq-upload-cancel-selector qq-upload-cancel qq-hide">取消</button>
+                <button type="button" class="qq-btn qq-upload-retry-selector qq-upload-retry qq-hide">重试</button>
+                <button type="button" class="qq-btn qq-upload-delete-selector qq-upload-delete">删除</button>
+                <span role="status" class="qq-upload-status-text-selector qq-upload-status-text"></span>
+            </li>
+            <li>
+                <div class="qq-progress-bar-container-selector">
+                    <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"
+                         class="qq-progress-bar-selector qq-progress-bar"></div>
+                </div>
+                <span class="qq-upload-spinner-selector qq-upload-spinner"></span>
+                <img class="qq-thumbnail-selector" qq-max-size="100" qq-server-scale>
+                <span class="qq-upload-file-selector qq-upload-file"></span>
+                <span class="qq-upload-size-selector qq-upload-size"></span>
+                <button type="button" class="qq-btn qq-upload-cancel-selector qq-upload-cancel">取消</button>
+                <button type="button" class="qq-btn qq-upload-retry-selector qq-upload-retry">重试</button>
+                <button type="button" class="qq-btn qq-upload-delete-selector qq-upload-delete">删除</button>
+                <span role="status" class="qq-upload-status-text-selector qq-upload-status-text"></span>
+            </li>
+        </ul>
+
+        <dialog class="qq-alert-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">关闭</button>
+            </div>
+        </dialog>
+
+        <dialog class="qq-confirm-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">否</button>
+                <button type="button" class="qq-ok-button-selector">是</button>
+            </div>
+        </dialog>
+
+        <dialog class="qq-prompt-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <input type="text">
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">取消</button>
+                <button type="button" class="qq-ok-button-selector">确定</button>
+            </div>
+        </dialog>
+    </div>
+</script>
+<script th:inline="javascript">
+    uploaderUrl = /*[[@{/upload/fine}]]*/ null;
+    imageUploaderUrl = /*[[@{/upload/image}]]*/ null;
+    testMode = /*[[${@environment.acceptsProfiles('test')}]]*/ true;
+    language = 'zh-cn';
+</script>
 
 
 <script type="text/javascript">
